Changes for 1.6.7

 - [DEV-137] fix incorrect key syntax error message (Richlv)
 - [ZBX-1054] fixed processing of logs and eventlogs which become empty only on the agent side (Dmitry)
 - [ZBX-1055] fixed DBexecute function result with PostreSQL (Sasha)
 - [ZBX-778] added support of $1..$9 macros in the {ITEM.NAME} macro in notifications (Sasha)
 - [ZBX-1031] fixed security vulnerability in server, allowing remote unauthenticated users to execute arbitrary SQL queries. Thanks to Nicob (Sasha)
 - [ZBX-1032] fixed security vulnerability in processing of net.tcp.listen under FreeBSD and Solaris agents. Thanks to Nicob (Sasha)
 - [ZBX-1050] fixed possible windows agent crash while processing big eventlog records (Sasha)
 - [ZBX-991] fixed processing of zabbix[queue] internal check (Sasha)
 - [ZBX-596] fixed support of IPV6 under Windows 2000 (Sasha)
 - [ZBX-1027] fixed that item key must be used in each subexpression of trigger expression (Vedmak)
 - [ZBX-982] fixed message when can't delete application with web items (Vedmak)
 - [ZBX-861] fixed problem with disappearing nodes in frontend (Artem)

Changes for 1.6.6

 - [ZBX-1024] added check for same application name in linked hosts (Vedmak)
 - [ZBX-1014] fixed gaps on graph with fixed y axis (Artem)
 - [ZBX-1013] fixed evaluation of aggregate items for proxy hosts (Sasha)
 - [ZBX-1011] zabbix_sender will send data in blocks of 250 values per TCP connection (Sasha)
 - [DEV-417] added services[] metric for Windows agents (Sasha)
 - [ZBX-1005] fixed evaluations of functions diff, change and abschange for character items if received value more than 255 characters (Sasha)
 - [ZBX-1004] made snmp parameters editable in templated items (Artem)
 - [ZBX-1001] fixed possible server crash while processing macros {ITEM.LASTVALUE} (Sasha)
 - [ZBX-999] fixed query in availability reports (Artem)
 - [ZBX-996] fixed possible server crash with enabled StartDBSyncers option (Sasha)